In Progress - Government 360 - Building Permit

--- a/displaytabs/GovernmentUI-MainTemplate.html
+++ b/displaytabs/GovernmentUI-MainTemplate.html
@@ -113,7 +113,7 @@
                                     </div>
                                     <!-- /.box-header -->
                                     <div class="box-body">
-                                        <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileMain"></div>
+                                        <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileMain"></div>
                                         <div class="nav-tabs-custom" style="margin-top: 5px;">
                                             <ul class="nav nav-tabs">
                                                 <li class="tab-pane active">
@@ -140,25 +140,25 @@
                                             </ul>
                                             <div class="tab-content no-padding">
                                                 <div class="tab-pane active" id="BuildingPermitBox1">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox1"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBox1"></div>
                                                 </div>
                                                 <div class="tab-pane" id="BuildingPermitBox2">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox2"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBox2"></div>
                                                 </div>
                                                 <div class="tab-pane" id="BuildingPermitBox3">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox3"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBox3"></div>
                                                 </div>
                                                 <div class="tab-pane" id="BuildingPermitBox4">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox4"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBox4"></div>
                                                 </div>
                                                 <div class="tab-pane" id="BuildingPermitBox5">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox5"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBox5"></div>
                                                 </div>
                                                 <div class="tab-pane" id="BuildingPermitBox6">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBox6"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBox6"></div>
                                                 </div>
                                                 <div class="tab-pane" id="BuildingPermitBoxAttachment">
-                                                    <div class="DisplayTab" tabName="BuildingPermit" tabUrl="BuildingPermitProfileBoxAttachment"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateBuildingPermit" tabUrl="RealEstateBuildingPermitProfileBoxAttachment"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -171,7 +171,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="BuildingPermit" tabUrl="SearchBuildingPermit"></div>
+                                <div class="DisplayTabCommon" tabName="RealEstateBuildingPermit" tabUrl="SearchRealEstateBuildingPermit"></div>
                             </div>
                         </div>
                     </div>
@@ -209,19 +209,19 @@
                                             </ul>
                                             <div class="tab-content no-padding">
                                                 <div class="tab-pane active" id="ElectricalPermitBox1">
-                                                    <div class="DisplayTab" tabName="ElectricalPermit" tabUrl="ElectricalPermitProfileBox1"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateElectricalPermit" tabUrl="RealEstateElectricalPermitProfileBox1"></div>
                                                 </div>
                                                 <div class="tab-pane" id="ElectricalPermitBox2">
-                                                    <div class="DisplayTab" tabName="ElectricalPermit" tabUrl="ElectricalPermitProfileBox2"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateElectricalPermit" tabUrl="RealEstateElectricalPermitProfileBox2"></div>
                                                 </div>
                                                 <div class="tab-pane" id="ElectricalPermitBox3">
-                                                    <div class="DisplayTab" tabName="ElectricalPermit" tabUrl="ElectricalPermitProfileBox3"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateElectricalPermit" tabUrl="RealEstateElectricalPermitProfileBox3"></div>
                                                 </div>
                                                 <div class="tab-pane" id="ElectricalPermitBox4">
-                                                    <div class="DisplayTab" tabName="ElectricalPermit" tabUrl="ElectricalPermitProfileBox4"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateElectricalPermit" tabUrl="RealEstateElectricalPermitProfileBox4"></div>
                                                 </div>
                                                 <div class="tab-pane" id="ElectricalPermitBoxAttachment">
-                                                    <div class="DisplayTab" tabName="ElectricalPermit" tabUrl="ElectricalPermitProfileBoxAttachment"></div>
+                                                    <div class="DisplayTab" tabName="RealEstateElectricalPermit" tabUrl="RealEstateElectricalPermitProfileBoxAttachment"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -234,7 +234,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="ElectricalPermit" tabUrl="SearchElectricalPermit"></div>
+                                <div class="DisplayTabCommon" tabName="RealEstateElectricalPermit" tabUrl="SearchRealEstateElectricalPermit"></div>
                             </div>
                         </div>
                     </div>
@@ -272,19 +272,19 @@
                                             </ul>
                                             <div class="tab-content no-padding">
                                                 <div class="tab-pane active" id="PlumbingPermitBox1">
-                                                    <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox1"></div>
+                                                    <div class="DisplayTab" tabName="RealEstatePlumbingPermit" tabUrl="RealEstatePlumbingPermitProfileBox1"></div>
                                                 </div>
                                                 <div class="tab-pane" id="PlumbingPermitBox2">
-                                                    <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox2"></div>
+                                                    <div class="DisplayTab" tabName="RealEstatePlumbingPermit" tabUrl="RealEstatePlumbingPermitProfileBox2"></div>
                                                 </div>
                                                 <div class="tab-pane" id="PlumbingPermitBox3">
-                                                    <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox3"></div>
+                                                    <div class="DisplayTab" tabName="RealEstatePlumbingPermit" tabUrl="RealEstatePlumbingPermitProfileBox3"></div>
                                                 </div>
                                                 <div class="tab-pane" id="PlumbingPermitBox4">
-                                                    <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBox4"></div>
+                                                    <div class="DisplayTab" tabName="RealEstatePlumbingPermit" tabUrl="RealEstatePlumbingPermitProfileBox4"></div>
                                                 </div>
                                                 <div class="tab-pane" id="PlumbingPermitBoxAttachment">
-                                                    <div class="DisplayTab" tabName="PlumbingPermit" tabUrl="PlumbingPermitProfileBoxAttachment"></div>
+                                                    <div class="DisplayTab" tabName="RealEstatePlumbingPermit" tabUrl="RealEstatePlumbingPermitProfileBoxAttachment"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -297,17 +297,17 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="PlumbingPermit" tabUrl="SearchPlumbingPermit"></div>
+                                <div class="DisplayTabCommon" tabName="RealEstatePlumbingPermit" tabUrl="SearchRealEstatePlumbingPermit"></div>
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="TransferTax">
+                    <div class="tab-pane" id="RealEstateTransferTax">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 75%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabName="TransferTax" tabUrl="TransferTaxProfile"></div>
+                                <div class="DisplayTab" tabName="RealEstateTransferTax" tabUrl="RealEstateTransferTaxProfile"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="TransferTax" tabUrl="SearchTransferTax"></div>
+                                <div class="DisplayTabCommon" tabName="RealEstateTransferTax" tabUrl="SearchRealEstateTransferTax"></div>
                             </div>
                         </div>
                     </div>
