--- a/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox1.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileBox1.html
@@ -7,12 +7,7 @@
             <div class="form-group" style="flex: 1; margin-left: 15px;">
                 <label>Name of Owner / Applicant</label>
                 <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
-            </div>
-            <div class="form-group" style="flex: 1; margin-left: 15px;">
-                <label>Last Name, First Name, M.I.</label>
-                <input type="text" class="form-control editRealEstateBuildingPermit" module="RealEstateBuildingPermitUI"
-                    name="assessedAmount">
+                    name="applicantName">
             </div>
             <div class="form-group" style="flex: 1; margin-right: 15px; margin-left: 15px;">
                 <label>Tax Acct. No.</label>
