--- a/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileMain.html
+++ b/displaytabs/tabs/GovernmentUI/RealEstateBuildingPermitProfileMain.html
@@ -29,9 +29,9 @@
     </div>
     <div class="form-group pull-right" style="flex: 1; margin-right: 15px; margin-left: 15px;">
         <label class="control-label">Issuer</label>
-        <div class="input-group" style="display: block;">
-            <input rowIndex="0" tabName="_TABNAME_" type="text" style="width: 100%;" class="form-control pull-right autocomplete displayEdit" name="issuerCode" placeholder="Issuer" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoname="issuerCode" helptitle="issuerCode" disabled="">
-            <input rowIndex="0" tabName="_TABNAME_" class="form-control editRealEstateBuildingPermit HiddenAutoComplete" name="issuerCode" type="hidden" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoNameField="issuerCode" value="">
+        <div class="input-group">
+            <input rowIndex="0" type="text" style="width: 200px;" class="form-control autocomplete displayEdit" name="issuerCode" placeholder="Issuer" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoname="issuerCode" helptitle="issuerCode" disabled="">
+            <input rowIndex="0" class="form-control editRealEstateBuildingPermit HiddenAutoComplete" name="issuerCode" type="hidden" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoNameField="issuerCode" value="">
             <div class="autocomplete-items" module="RealEstateBuildingPermitUI" mainmodule="RealEstateBuildingPermitUI" autoname="issuerCode">
             </div>
         </div>
