In Progress - Government 360 - Building Permit

--- a/sample.html
+++ b/sample.html
@@ -1,67 +1,27 @@
-public String realEstateCode;
-public String permitType;
-public String permitCode;
-public String applicationNumber;
-public LocalDate applicationDate;
-public String issuerCode;
-public LocalDate issueDate;
+public String architectOrCivilEngineerName;
+public String architectOrCivilEngineerAddress;
+public String architectOrCivilEngineerLicense;
+public String architectOrCivilEngineerDateIssued;
+public String architectOrCivilEngineerPlaceIssued;
+public String architectOrCivilEngineerTIN;
 
-public String ownerFirstName;
-public String ownerLastName;
-public String ownerMI;
-public String taxAccountNo;
-public String forEnterprise;
-public String formOfOwnership;
-public String businessType;
-public String address;
-public String telNo;
-public String locationOfConstructionAddress;
+public String applicantName;
+public String applicantAddress;
+public String applicantCTC;
+public LocalDate applicantCTCDateIssued;
+public String applicantCTCPlaceIssued;
 
-public Boolean scopeOfWorkNew;
-public String scopeOfWorkInAddition;
-public String scopeOfWorkRepair;
-public String scopeOfWorkRenovation;
-public String scopeOfWorkDemolition;
-public String scopeOfOther1;
-public String scopeOfOther2;
+public String architectOrCivilEngineerInChargeName;
+public String architectOrCivilEngineerInChargeAddress;
+public String architectOrCivilEngineerInChargeLicense;
+public String architectOrCivilEngineerInChargeDateIssued;
+public String architectOrCivilEngineerInChargePlaceIssued;
+public String architectOrCivilEngineerInChargeTIN;
 
-public Boolean occupancyTypeResidentialSingle;
-public Boolean occupancyTypeResidentialDuplex;
-public Boolean occupancyTypeResidentialRowHouse;
-public String occupancyTypeResidentialOther;
-
-public Boolean occupancyTypeCommercialBank;
-public Boolean occupancyTypeCommercialStore;
-public Boolean occupancyTypeCommercialHotel;
-public Boolean occupancyTypeCommercialOffice;
-public Boolean occupancyTypeCommercialRestaurant;
-public Boolean occupancyTypeCommercialShop;
-public Boolean occupancyTypeCommercialGasolineStation;
-public Boolean occupancyTypeCommercialMarket;
-public Boolean occupancyTypeCommercialDormitory;
-public String occupancyTypeCommercialOther;
-
-public Boolean occupancyTypeIndustrialFactory;
-public Boolean occupancyTypeIndustrialRepairShop;
-public Boolean occupancyTypeIndustrialRefinery;
-public Boolean occupancyTypeIndustrialPrintingPress;
-public Boolean occupancyTypeIndustrialWarehouse;
-public String occupancyTypeIndustrialOther;
-
-public Boolean occupancyTypeInstitutionSchool;
-public Boolean occupancyTypeInstitutionChurch;
-public Boolean occupancyTypeInstitutionHospital;
-public Boolean occupancyTypeInstitutionWelfare;
-public Boolean occupancyTypeInstitutionTheater;
-public String occupancyTypeInstitutionOther;
-
-public Boolean occupancyTypeAgriculturalBarn;
-public Boolean occupancyTypeAgriculturalMill;
-public String occupancyTypeAgriculturalOther;
-
-public String occupancyTypeOtherConstruction;
-
-public Boolean occupancyTypeStreetFurniturePark;
-public Boolean occupancyTypeStreetFurnitureSidewalk;
-public Boolean occupancyTypeStreetFurnitureOutdoorAds;
-public String occupancyTypeStreetFurnitureOther;
+public String lotOwnerTCT;
+public String lotOwnerTaxDeclaration;
+public String lotOwnerName;
+public String lotOwnerAddress;
+public String lotOwnerCTC;
+public LocalDate lotOwnerCTCCTCDateIssued;
+public String lotOwnerCTCPlaceIssued;
